# imdb-cartaz-norteshopping

./: README.md  emailconfig.py  local_movies_imdb.py  pyproject.toml  requirements.txt
.github/workflows/: local_movies_imdb.yml
